  * add d/source/format quilt
  * include the Makefile changes that was out of d/patches in
    01_port_to_gcrypt.patch

  [ Helmut Grohne ]
  * Fix FTCBFS: Let dh_auto_build pass cross tools to make.
    (Closes: #902549)
  * Remove unused/wrong INSTALL_PROGRAM variable.

  [ Javier Fernández-Sanguino ]
  * Add VCS fields in debian/control
  * Updated Standards-Version

 -- Javier Fernández-Sanguino Peña <jfs@debian.org>  Thu, 20 Jan 2022 22:35:49 +0100

chntpw (1.0-1.1) unstable; urgency=low

  * Non-maintainer upload.
  * B-d on libgcrypt20-dev instead of (dummy transition package)
    libgcrypt11-dev. Closes: #864097

 -- Andreas Metzler <ametzler@debian.org>  Sat, 27 Oct 2018 09:09:58 +0200

chntpw (1.0-1) unstable; urgency=low

  * Update to latest upstream release, published in 2014-02-01
  * debian/rules: Provide also the other binaries built in the sources:
    reged (Simple Registry Edit Utility for Windows registry hives),
    sampasswd (SAM database, add or remove user in a group),
    samusrgrp (SAM database, add or remove user in a group)
  * debian/samusrgrp.8 debian/reged.8 debian/sampasswd.8: Write manpages
    for all of the other programs built and included now in the package
  * debian/chntpw.8: Update the manpage contents based on the program's
     current -h output.
  * debian/patches/01_port_to_gcrypt.patch: 
        Update patch since in this release upstream author uses a new define
        (DOCRYPTO) that enables cryptographic code.  This code, that enabled
        users to change the password, is not enabled by default anymore since
        it does not work with Windows XP (and later) systems.
  * debian/patches/11_improve_documentation:
        Add a new patch to improve the English (by a non-native speaker
        oh! the irony!) of the HISTORY.txt and MANUAL.txt files, fixing
        grammar and spelling mistakes, as well as some typos.
  * debian/changelog: Fix typo and add reference to Ubuntu closed bug
  * debian/control: