@@ -1,4 +1,5 @@
-Detect stream write failure.
+Description: Detect stream write failure.
+Forwarded: no
 --- a/ntreg.c
 +++ b/ntreg.c
 @@ -3493,7 +3493,14 @@
